added missing accessors and mutators to MyBoundedShape